--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -2,47 +2,94 @@
 <html lang="en">
 
 <head>
-  <title>Blog</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+	<title>Brand</title>
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+	<style>
+		.box-container {
+			display: flex;
+			justify-content: center;
+			align-items: center; /* Center vertically as well */
+			/*background-color: grey;*/
+			font-size: 20px;
+			padding: 20px;
+		}
+		.box {
+			display: flex;
+			justify-content: space-between; /* Distribute space between items */
+			align-items: center; /* Center vertically within .box */
+			/*background-color: darkcyan;*/
+			padding: 20px;
+			width: 100%; /* Ensure full width of the container */
+		}
+		.box1 {
+			flex-grow: 1; /* Allow this element to take up available space */
+			text-align: center; /* Center the text within .box1 */
+			/*background-color: red;*/
+		}
+		.box2 {
+			/*background-color: green;*/
+			display: flex;
+			align-items: center; /* Center vertically within .box2 */
+		}
+		.box2 div {
+			display: inline-block; /* Display items on the same line */
+			margin-left: 10px; /* Add some space between the items */
+		}
+
+	</style>
 
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">Metacoding</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-            {{#sessionUser}}
-              <li class="nav-item">
-                <a class="nav-link" href="/board/saveForm">글쓰기</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/user/updateForm">회원정보보기</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/logout">로그아웃</a>
-              </li>
-            {{/sessionUser}}
+	<div class="box-container">
+		<div class="box">
+			<div class="box1">
+				플랫폼명
+			</div>
+			<div class="box2">
+				<div>회원가입</div>
+				<div>로그인</div>
+				<div>마이페이지</div>
+			</div>
+		</div>
 
-            {{^sessionUser}}
-              <li class="nav-item">
-                <a class="nav-link" href="/joinForm">회원가입</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/loginForm">로그인</a>
-              </li>
-            {{/sessionUser}}
-        </ul>
-      </div>
-    </div>
-  </nav>
+	</div>
+	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+		<div class="container-fluid">
+			<img src="../../../../../images/brand.png"  width="100px">
+			<a class="navbar-brand" href="/"></a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="collapsibleNavbar">
+				<ul class="navbar-nav">
+					{{#sessionUser}}
+						<li class="nav-item">
+							<a class="nav-link" href="/board/saveForm">글쓰기</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/user/updateForm">회원정보보기</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/logout">로그아웃</a>
+						</li>
+					{{/sessionUser}}
+
+					{{^sessionUser}}
+						<li class="nav-item">
+							<a class="nav-link" href="/joinForm">회원가입</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/loginForm">로그인</a>
+						</li>
+					{{/sessionUser}}
+				</ul>
+			</div>
+		</div>
+	</nav>
