프로젝트 초기세팅

--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -19,6 +19,7 @@
 			font-size: 20px;
 			padding: 20px;
 		}
+
 		.box {
 			display: flex;
 			justify-content: space-between; /* Distribute space between items */
@@ -27,16 +28,19 @@
 			padding: 20px;
 			width: 100%; /* Ensure full width of the container */
 		}
+
 		.box1 {
 			flex-grow: 1; /* Allow this element to take up available space */
 			text-align: center; /* Center the text within .box1 */
 			/*background-color: red;*/
 		}
+
 		.box2 {
 			/*background-color: green;*/
 			display: flex;
 			align-items: center; /* Center vertically within .box2 */
 		}
+
 		.box2 div {
 			display: inline-block; /* Display items on the same line */
 			margin-left: 10px; /* Add some space between the items */
@@ -62,8 +66,7 @@
 	</div>
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 		<div class="container-fluid">
-			<img src="../../../../../images/brand.png"  width="100px">
-			<a class="navbar-brand" href="/"></a>
+			<a class="navbar-brand" href="/"><img src="../../../../../images/brand.png" width="100px"></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
 				<span class="navbar-toggler-icon"></span>
 			</button>
