헤더, 푸터, 메인페이지, 회원가입페이지, 로그인 페이지 통합 완료

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,29 +1,92 @@
 {{> layout/header}}
 
-<div class="container p-5">
 
-    <div class="mb-2 d-flex justify-content-end">
-        <form class="d-flex" action="#">
-            <input id="keyword" class="form-control me-2" type="text" name="keyword" placeholder="Search" required>
-            <button class="btn btn-primary" type="submit">Search</button>
-        </form>
-    </div>
+<div class="d-flex justify-content-center align-items-center">
+	<div class="col-xl-6 col-lg-8 col-md-10 col-sm-12">
+		<div class="card p-3 mt-4 mb-4 bg-info m-2">
+			<div class="d-flex">
+				<div class="col-4 card">
+					<p>지역별</p>
+					<p>- 서울</p>
+					<p>- 부산</p>
+					<p>- 경기</p>
+				</div>
+				<div class="col-8 card">
+					<p>개발(JavaScript)</p>
+					<p>- (이미지) 프론트엔드</p>
+					<p>- (이미지) 백엔드</p>
+					<p>- (이미지) DevOps</p>
+					<p>- (이미지) Java</p>
+				</div>
+			</div>
+		</div>
 
+		<div class="mb-4 d-flex flex-wrap">
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="card m-2">
+					<a href="#"><img src="#" class="img-fluid"></a>
+					<h4 class="card-title">카카오</h4>
+					<a href="#">백엔드 개발자</a>
+					<div class="d-flex">
+						<span class="col-3">신입</span>
+						<span class="col-3">대졸</span>
+						<span class="col-3">제주</span>
+						<span class="col-3">D-34</span>
+					</div>
+					<button type="button" class="btn btn-warning">북마크</button>
+				</div>
+			</div>
 
-    <div class="card mb-3">
-        <div class="card-body">
-            <h4 class="card-title mb-3">제목</h4>
-            <a href="#" class="btn btn-primary">상세보기</a>
-        </div>
-    </div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="card m-2">
+					<a href="#"><img src="#" class="img-fluid"></a>
+					<h4 class="card-title">카카오</h4>
+					<a href="#">백엔드 개발자</a>
+					<div class="d-flex">
+						<span class="col-3">신입</span>
+						<span class="col-3">대졸</span>
+						<span class="col-3">제주</span>
+						<span class="col-3">D-34</span>
+					</div>
+					<button type="button" class="btn btn-warning">북마크</button>
+				</div>
+			</div>
 
-    <!--disabled-->
-    <ul class="pagination d-flex justify-content-center">
-        <li class="page-item disabled"><a class="page-link" href="#">Previous</a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
-    </ul>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="card m-2">
+					<a href="#"><img src="#" class="img-fluid"></a>
+					<h4 class="card-title">카카오</h4>
+					<a href="#">백엔드 개발자</a>
+					<div class="d-flex">
+						<span class="col-3">신입</span>
+						<span class="col-3">대졸</span>
+						<span class="col-3">제주</span>
+						<span class="col-3">D-34</span>
+					</div>
+					<button type="button" class="btn btn-warning">북마크</button>
+				</div>
+			</div>
 
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="card m-2">
+					<a href="#"><img src="#" class="img-fluid"></a>
+					<h4 class="card-title">카카오</h4>
+					<a href="#">백엔드 개발자</a>
+					<div class="d-flex">
+						<span class="col-3">신입</span>
+						<span class="col-3">대졸</span>
+						<span class="col-3">제주</span>
+						<span class="col-3">D-34</span>
+					</div>
+					<button type="button" class="btn btn-warning">북마크</button>
+				</div>
+			</div>
+			
+		</div>
+	</div>
+
+	<div class="col-xl-3 col-lg-2 col-md-1"></div>
 </div>
+
 
 {{> layout/footer}}
