--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -1,9 +1,21 @@
-<div class="bg-light p-5 text-center">
-    <h4>Created by Metacoding</h4>
-    <h5>☎ 010-2222-7777</h5>
-    <button class="btn btn-outline-primary">고객센터</button>
-    <button class="btn btn-outline-primary">오시는길</button>
-</div>
-</body>
+<footer class="bg-info p-2 mt-auto">
+	<div class="mt-2 d-flex justify-content-around">
+		<a href="#" class="text-decoration-none text-white">회사소개</a>
+		<a href="#" class="text-decoration-none text-white">이용약관</a>
+		<a href="#" class="text-decoration-none text-white">개인정보처리방침</a>
+		<a href="#" class="text-decoration-none text-white">고객센터</a>
+	</div>
 
+	<div class="d-flex justify-content-center p-3">
+		<div class="ms-5 mt-3" style="font-size: 14px; line-height: 0.6">
+			<p>(주)원티드랩 (대표이사:이복기) | 서울특별시 송파구 올림픽로 300 롯데월드타워 35층 | 통신판매번호 : 2020-서울송파-3147</p>
+			<br/>
+			<p>유료직업소개사업등록번호 : (국내) 제2020-3230259-14-5-00018호 | 사업자등록번호 : 299-86-00021 | 02-539-7118</p>
+			<br/>
+			<p>© Wantedlab, Inc.</p>
+		</div>
+	</div>
+</footer>
+
+</body>
 </html>
