--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -10,89 +10,50 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+
 	<style>
-		.box-container {
-			display: flex;
-			justify-content: center;
-			align-items: center; /* Center vertically as well */
-			/*background-color: grey;*/
-			font-size: 20px;
-			padding: 20px;
-		}
-
-		.box {
-			display: flex;
-			justify-content: space-between; /* Distribute space between items */
-			align-items: center; /* Center vertically within .box */
-			/*background-color: darkcyan;*/
-			padding: 20px;
-			width: 100%; /* Ensure full width of the container */
-		}
-
-		.box1 {
-			flex-grow: 1; /* Allow this element to take up available space */
-			text-align: center; /* Center the text within .box1 */
-			/*background-color: red;*/
-		}
-
-		.box2 {
-			/*background-color: green;*/
-			display: flex;
-			align-items: center; /* Center vertically within .box2 */
-		}
-
-		.box2 div {
-			display: inline-block; /* Display items on the same line */
-			margin-left: 10px; /* Add some space between the items */
-		}
 
 	</style>
-
 </head>
 
-<body>
-	<div class="box-container">
-		<div class="box">
-			<div class="box1">
-				플랫폼명
-			</div>
-			<div class="box2">
-				<div>회원가입</div>
-				<div>로그인</div>
-				<div>마이페이지</div>
-			</div>
-		</div>
+<body class="d-flex flex-column min-vh-100">
 
-	</div>
-	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="/"><img src="../../../../../images/brand.png" width="100px"></a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="collapsibleNavbar">
-				<ul class="navbar-nav">
-					{{#sessionUser}}
-						<li class="nav-item">
-							<a class="nav-link" href="/board/saveForm">글쓰기</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="/user/updateForm">회원정보보기</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="/logout">로그아웃</a>
-						</li>
-					{{/sessionUser}}
-
-					{{^sessionUser}}
-						<li class="nav-item">
-							<a class="nav-link" href="/joinForm">회원가입</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="/loginForm">로그인</a>
-						</li>
-					{{/sessionUser}}
-				</ul>
-			</div>
+	<header>
+		<div class="d-flex justify-content-center align-items-center p-1">
+			<h1 class="text-center flex-grow-1">플랫폼명</h1>
+			<a class="btn btn-white" href="/userJoinForm">유저회원가입</a>
+			<a class="btn btn-white" href="/companyJoinForm">기업회원가입</a>
+			<a class="btn btn-white" href="/loginForm">로그인</a>
 		</div>
-	</nav>
+		<nav class="navbar navbar-expand-sm navbar-dark bg-info mb-3">
+			<a href="/"><img src="../../../../../images/brand.png" class="img-thumbnail" alt="브랜드 로고" width="100px"></a>
+			<div class="container-fluid">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="mynavbar">
+					<ul class="navbar-nav me-auto">
+						<li class="nav-item">
+							<a class="nav-link text-white" href="#">채용정보</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-white" href="#">이력서등록</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-white" href="#">이력서관리</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-white" href="#">지원내역</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-white" href="#">고객센터</a>
+						</li>
+					</ul>
+					<form class="d-flex">
+						<input class="form-control me-2" type="text" placeholder="Search">
+						<button class="badge bg-secondary" type="button">Search</button>
+					</form>
+				</div>
+			</div>
+		</nav>
+	</header>
