--- a/src/main/resources/templates/user/loginForm.mustache
+++ b/src/main/resources/templates/user/loginForm.mustache
@@ -1,21 +1,40 @@
 {{> layout/header}}
 
-<div class="container p-5">
+<div class="d-flex my-5">
+	<div class="mx-auto card p-5 bg-info">
 
-    <div class="card">
-        <div class="card-header"><b>로그인을 해주세요</b></div>
-        <div class="card-body">
-            <form action="#">
-                <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Enter username" name="username" value="ssar">
-                </div> 
-                <div class="mb-3">
-                    <input type="password" class="form-control" placeholder="Enter password" name="password" value="1234">
-                </div>
-                <button type="submit" class="btn btn-primary form-control">로그인</button>
-            </form>
-        </div>
-    </div>
+		<div>
+			<h3 class="text-center mb-3">로그인</h3>
+			<div class="d-flex">
+				<a href="" class="mx-auto text-decoration-none text-black">로그인</a>
+				<a href="" class="mx-auto text-decoration-none text-black">회원가입</a>
+			</div>
+		</div>
+
+		<div class="mt-3"></div>
+
+		<form action="#" method="post" onsubmit="">
+			<div class="d-flex form-group mt-2 mb-2">
+				<input type="email" name="email" class="form-control" placeholder="아이디(이메일)" id="email">
+			</div>
+
+			<div class="mb-2">
+				<input type="password" name="password" class="form-control" placeholder="비밀번호" id="password">
+			</div>
+
+			<div class="mt-4"></div>
+
+
+			<div class="form-check mb-3">
+				<input class="form-check-input" type="checkbox" id="">
+				<label class="form-check-label" for="flexCheckChecked">아이디를 기억 하시겠습니까?</label>
+			</div>
+
+			<div class="d-grid mb-2">
+				<input id="button" class=" btn btn-primary" type="submit" value="로그인" onclick="">
+			</div>
+		</form>
+	</div>
 </div>
 
 {{> layout/footer}}
