Company -> comp로 수정, comp패키지 생성 및 초기설정

--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -22,7 +22,7 @@
 		<div class="d-flex justify-content-center align-items-center p-1">
 			<h1 class="text-center flex-grow-1">플랫폼명</h1>
 			<a class="btn btn-white" href="/userJoinForm">유저회원가입</a>
-			<a class="btn btn-white" href="/companyJoinForm">기업회원가입</a>
+			<a class="btn btn-white" href="/compJoinForm">기업회원가입</a>
 			<a class="btn btn-white" href="/loginForm">로그인</a>
 		</div>
 		<nav class="navbar navbar-expand-sm navbar-dark bg-info mb-3">
