--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -2,6 +2,9 @@
 
 
 <div class="d-flex justify-content-center align-items-center">
+	
+	<div class="col-xl-3 col-lg-2 col-md-1"></div>
+	
 	<div class="col-xl-6 col-lg-8 col-md-10 col-sm-12">
 		<div class="card p-3 mt-4 mb-4 bg-info m-2">
 			<div class="d-flex">
