--- a/src/main/resources/templates/user/selectJoinForm.mustache
+++ b/src/main/resources/templates/user/selectJoinForm.mustache
@@ -1,21 +1,27 @@
 {{> layout/header}}
 
-<div class="d-flex my-5 flex-fill justify-content-center">
+<style>
+  .box {
+    height: 230px;
+    width: 230px;
+  }
+  .text {
+    font-size: 35px;
+  }
+</style>
+
+<div class="d-flex flex-fill align-items-center justify-content-center">
   <div
-    class="d-flex justify-content-center card p-3 m-5 bg-info"
+    class="d-flex align-items-center justify-content-center box card m-5 bg-info"
     onclick="userJoinForm()"
   >
-    <div class="ms-auto">
-      <h3 class="text-center mb-3">개인회원가입</h3>
-    </div>
+    <div class="text">개인회원가입</div>
   </div>
   <div
-    class="d-flex justify-content-center card p-3 m-5 bg-info"
-    onclick="compJoinForm()"
+    class="d-flex align-items-center justify-content-center box card m-5 bg-info"
+    onclick="userJoinForm()"
   >
-    <div class="ms-auto">
-      <h3 class="text-center mb-3">기업회원가입</h3>
-    </div>
+    <div class="text">기업회원가입</div>
   </div>
 </div>
 
@@ -23,7 +29,6 @@
   function userJoinForm() {
     location.href = "/userJoinForm";
   }
-
   function compJoinForm() {
     location.href = "/compJoinForm";
   }
