--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -25,8 +25,7 @@
 				<h1 class="text-center flex-grow-1">플랫폼명</h1>
 			</div>
 			<div class="col-4">
-				<a class="btn btn-white" href="/userJoinForm">유저회원가입</a>
-				<a class="btn btn-white" href="/companyJoinForm">기업회원가입</a>
+				<a class="btn btn-white" href="/selectJoinForm">회원가입</a>
 				<a class="btn btn-white" href="/loginForm">로그인</a>
 			</div>
 		</div>
