--- a/src/main/resources/templates/user/selectJoinForm.mustache
+++ b/src/main/resources/templates/user/selectJoinForm.mustache
@@ -19,7 +19,7 @@
   </div>
   <div
     class="d-flex align-items-center justify-content-center box card m-5 bg-info"
-    onclick="userJoinForm()"
+    onclick="compJoinForm()"
   >
     <div class="text">기업회원가입</div>
   </div>
