--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -1,65 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Brand</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
 
-<head>
-	<title>Brand</title>
-	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
-	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+    <style></style>
+  </head>
 
-	<style>
+  <body class="d-flex flex-column min-vh-100">
+    <header>
+      <div class="d-flex justify-content-center align-items-center p-1">
+        <div class="col-4"></div>
+        <div class="col-4">
+          <h1 class="text-center flex-grow-1">플랫폼명</h1>
+        </div>
+        <div class="col-4">
+          <a class="btn btn-white" href="/userJoinForm">유저회원가입</a>
+          <a class="btn btn-white" href="/companyJoinForm">기업회원가입</a>
+          <a class="btn btn-white" href="/loginForm">로그인</a>
+        </div>
+      </div>
 
-	</style>
-</head>
-
-<body class="d-flex flex-column min-vh-100">
-
-	<header>
-		<div class="d-flex justify-content-center align-items-center p-1">
-			<div class="col-4"></div>
-			<div class="col-4">
-				<h1 class="text-center flex-grow-1">플랫폼명</h1>
-			</div>
-			<div class="col-4">
-				<a class="btn btn-white" href="/userJoinForm">유저회원가입</a>
-				<a class="btn btn-white" href="/companyJoinForm">기업회원가입</a>
-				<a class="btn btn-white" href="/loginForm">로그인</a>
-			</div>
-		</div>
-    
-		<nav class="navbar navbar-expand-sm navbar-dark bg-info mb-3">
-			<a href="/"><img src="../../../../../images/brand.png" class="img-thumbnail" alt="브랜드 로고" width="100px"></a>
-			<div class="container-fluid">
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="mynavbar">
-					<ul class="navbar-nav me-auto">
-						<li class="nav-item">
-							<a class="nav-link text-white" href="#">채용정보</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-white" href="#">이력서등록</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-white" href="#">이력서관리</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-white" href="#">지원내역</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-white" href="#">고객센터</a>
-						</li>
-					</ul>
-					<form class="d-flex">
-						<input class="form-control me-2" type="text" placeholder="Search">
-						<button class="badge bg-secondary" type="button">Search</button>
-					</form>
-				</div>
-			</div>
-		</nav>
-	</header>
+      <nav class="navbar navbar-expand-sm navbar-dark bg-info mb-3">
+        <a href="/"
+          ><img
+            src="../../../../../images/brand.png"
+            class="img-thumbnail"
+            alt="브랜드 로고"
+            width="100px"
+        /></a>
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#mynavbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">채용정보</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">이력서등록</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">이력서관리</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">지원내역</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">고객센터</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input
+                class="form-control me-2"
+                type="text"
+                placeholder="Search"
+              />
+              <button class="badge bg-secondary" type="button">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </header>
+  </body>
+</html>
