메인페이지수정

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -3,92 +3,285 @@
 
 <div class="d-flex justify-content-center align-items-center">
 	
-	<div class="col-xl-3 col-lg-2 col-md-1"></div>
+	<div class="col-auto"></div>
 	
-	<div class="col-xl-6 col-lg-8 col-md-10 col-sm-12">
-		<div class="card p-3 mt-4 mb-4 bg-info m-2">
-			<div class="d-flex">
-				<div class="col-4 card">
-					<p>지역별</p>
-					<p>- 서울</p>
-					<p>- 부산</p>
-					<p>- 경기</p>
+	<div class="col-xl-7 col-lg-10 col-md-11 col-sm-12">
+
+
+		<div class="d-flex justify-content-around m-2 border border-info">
+			<div class="m-2 border border-info col-5">
+				<h4 class="mt-2 text-center">지역별</h4>
+				<div class="d-flex">
+					<div class="col-6">
+						<div class="row ps-3">
+							<button type="button" class="border-0 bg-white">전국</button>
+							<button type="button" class="border-0 bg-white">서울/인천/경기</button>
+							<button type="button" class="border-0 bg-white">부산/울산/경남</button>
+							<button type="button" class="border-0 bg-white">대구/경북</button>
+							<button type="button" class="border-0 bg-white">광주/전라</button>
+							<button type="button" class="border-0 bg-white">대전/세종/충청</button>
+							<button type="button" class="border-0 bg-white">강원</button>
+							<button type="button" class="border-0 bg-white">제주</button>
+						</div>
+					</div>
+					<div class="col-5">
+						<div class="row pe-3 overflow-auto" style="height: 210px;">
+							<button type="button" class="border-0 bg-white">전체</button>
+							<button type="button" class="border-0 bg-white">강서구</button>
+							<button type="button" class="border-0 bg-white">금정구</button>
+							<button type="button" class="border-0 bg-white">남구</button>
+							<button type="button" class="border-0 bg-white">동구</button>
+							<button type="button" class="border-0 bg-white">동래구</button>
+							<button type="button" class="border-0 bg-white">부산진구</button>
+							<button type="button" class="border-0 bg-white">북구</button>
+							<button type="button" class="border-0 bg-white">사상구</button>
+							<button type="button" class="border-0 bg-white">사하구</button>
+							<button type="button" class="border-0 bg-white">서구</button>
+							<button type="button" class="border-0 bg-white">수영구</button>
+							<button type="button" class="border-0 bg-white">연제구</button>
+							<button type="button" class="border-0 bg-white">영도구</button>
+							<button type="button" class="border-0 bg-white">중구</button>
+							<button type="button" class="border-0 bg-white">해운대구</button>
+							<button type="button" class="border-0 bg-white">기장군</button>
+						</div>
+					</div>
+					<div class="col-6"></div>
 				</div>
-				<div class="col-8 card">
-					<p>개발(JavaScript)</p>
-					<p>- (이미지) 프론트엔드</p>
-					<p>- (이미지) 백엔드</p>
-					<p>- (이미지) DevOps</p>
-					<p>- (이미지) Java</p>
+
+			</div>
+
+
+
+
+			<div class="m-2 border border-info col-5">
+				<h4 class="mt-2 text-center">직무별</h4>
+
+				<div class="d-flex">
+
+
+
+					
+					<div class="col-auto">
+						<div>
+							<div class="form-check d-inline-block ms-2 me-2">
+								<input class="form-check-input" type="checkbox" id="">
+								<label class="form-check-label">백엔드</label>
+							</div>
+						</div>
+
+						
+						<div>
+							<div class="form-check d-inline-block ms-2 me-2">
+								<input class="form-check-input" type="checkbox" id="">
+								<label class="form-check-label">안드로이드</label>
+							</div>
+						</div>
+
+						
+						<div>
+							<div class="form-check d-inline-block ms-2 me-2">
+								<input class="form-check-input" type="checkbox" id="">
+								<label class="form-check-label">빅데이터</label>
+							</div>
+						</div>
+					</div>
+
+
+
+					<div class="col-auto">
+						<div>
+							<div class="form-check d-inline-block ms-2 me-2">
+								<input class="form-check-input" type="checkbox" id="">
+								<label class="form-check-label">프런트엔드</label>
+							</div>
+						</div>
+
+						
+						<div>
+							<div class="form-check d-inline-block ms-2 me-2">
+								<input class="form-check-input" type="checkbox" id="">
+								<label class="form-check-label">IOS</label>
+							</div>
+						</div>
+
+						
+						<div>
+							<div class="form-check d-inline-block ms-2 me-2">
+								<input class="form-check-input" type="checkbox" id="">
+								<label class="form-check-label">임베디드</label>
+							</div>
+						</div>
+					</div>
+				
+
+					
+					<div class="col-auto">
+						<div>
+							<div class="form-check d-inline-block ms-2 me-2">
+								<input class="form-check-input" type="checkbox" id="">
+								<label class="form-check-label">풀스택</label>
+							</div>
+						</div>
+
+						
+						<div>
+							<div class="form-check d-inline-block ms-2 me-2">
+								<input class="form-check-input" type="checkbox" id="">
+								<label class="form-check-label">서버</label>
+							</div>
+						</div>
+					</div>
+				
+
+
+					
 				</div>
+
+
 			</div>
 		</div>
 
+
+
+
+
+
 		<div class="mb-4 d-flex flex-wrap">
+
+
+
 			<div class="col-lg-3 col-md-4 col-sm-6">
-				<div class="card m-2">
-					<a href="#"><img src="#" class="img-fluid"></a>
-					<h4 class="card-title">카카오</h4>
-					<a href="#">백엔드 개발자</a>
-					<div class="d-flex">
-						<span class="col-3">신입</span>
-						<span class="col-3">대졸</span>
-						<span class="col-3">제주</span>
-						<span class="col-3">D-34</span>
+				<div class="border border-info m-2 p-2">
+					<a href="#" class="text-black text-decoration-none"><img src="../../../images/kakao_logo.png" class="img-fluid">
+						<h4 class="mt-1 fw-bold">카카오</h4>
+						<div class="mb-1 fst-italic">백엔드 개발자</div>
+						<div class="mb-2">
+							<span class="badge bg-primary">Java</span>
+							<span class="badge bg-primary">DB</span>
+							<span class="badge bg-primary">Spring</span>
+						</div>
+						<div>
+							<span class="badge bg-success">신입</span>
+							<span class="badge bg-success">학력무관</span>
+							<span class="badge bg-success">경기도</span>
+						</div>
+					</a>
+					<div class="">
+						<button type="button" class="border-0 bg-white mt-2"><h3>❤️</h3></button>
+						<button type="button" class="invisible border-0 bg-white mt-2"><h3>🤍</h3></button>
+						<span class="fw-bold">D-34</span>
 					</div>
-					<button type="button" class="btn btn-warning">북마크</button>
 				</div>
 			</div>
 
+
 			<div class="col-lg-3 col-md-4 col-sm-6">
-				<div class="card m-2">
-					<a href="#"><img src="#" class="img-fluid"></a>
-					<h4 class="card-title">카카오</h4>
-					<a href="#">백엔드 개발자</a>
-					<div class="d-flex">
-						<span class="col-3">신입</span>
-						<span class="col-3">대졸</span>
-						<span class="col-3">제주</span>
-						<span class="col-3">D-34</span>
+				<div class="border border-info m-2 p-2">
+					<a href="#" class="text-black text-decoration-none"><img src="../../../images/kakao_logo.png" class="img-fluid">
+						<h4 class="mt-1 fw-bold">카카오</h4>
+						<div class="mb-1 fst-italic">백엔드 개발자</div>
+						<div class="mb-2">
+							<span class="badge bg-primary">Java</span>
+							<span class="badge bg-primary">DB</span>
+							<span class="badge bg-primary">Spring</span>
+						</div>
+						<div>
+							<span class="badge bg-success">신입</span>
+							<span class="badge bg-success">학력무관</span>
+							<span class="badge bg-success">경기도</span>
+						</div>
+					</a>
+					<div class="">
+						<button type="button" class="border-0 bg-white mt-2"><h3>❤️</h3></button>
+						<button type="button" class="invisible border-0 bg-white mt-2"><h3>🤍</h3></button>
+						<span class="fw-bold">D-34</span>
 					</div>
-					<button type="button" class="btn btn-warning">북마크</button>
 				</div>
 			</div>
 
+
 			<div class="col-lg-3 col-md-4 col-sm-6">
-				<div class="card m-2">
-					<a href="#"><img src="#" class="img-fluid"></a>
-					<h4 class="card-title">카카오</h4>
-					<a href="#">백엔드 개발자</a>
-					<div class="d-flex">
-						<span class="col-3">신입</span>
-						<span class="col-3">대졸</span>
-						<span class="col-3">제주</span>
-						<span class="col-3">D-34</span>
+				<div class="border border-info m-2 p-2">
+					<a href="#" class="text-black text-decoration-none"><img src="../../../images/kakao_logo.png" class="img-fluid">
+						<h4 class="mt-1 fw-bold">카카오</h4>
+						<div class="mb-1 fst-italic">백엔드 개발자</div>
+						<div class="mb-2">
+							<span class="badge bg-primary">Java</span>
+							<span class="badge bg-primary">DB</span>
+							<span class="badge bg-primary">Spring</span>
+						</div>
+						<div>
+							<span class="badge bg-success">신입</span>
+							<span class="badge bg-success">학력무관</span>
+							<span class="badge bg-success">경기도</span>
+						</div>
+					</a>
+					<div class="">
+						<button type="button" class="border-0 bg-white mt-2"><h3>❤️</h3></button>
+						<button type="button" class="invisible border-0 bg-white mt-2"><h3>🤍</h3></button>
+						<span class="fw-bold">D-34</span>
 					</div>
-					<button type="button" class="btn btn-warning">북마크</button>
 				</div>
 			</div>
 
+
 			<div class="col-lg-3 col-md-4 col-sm-6">
-				<div class="card m-2">
-					<a href="#"><img src="#" class="img-fluid"></a>
-					<h4 class="card-title">카카오</h4>
-					<a href="#">백엔드 개발자</a>
-					<div class="d-flex">
-						<span class="col-3">신입</span>
-						<span class="col-3">대졸</span>
-						<span class="col-3">제주</span>
-						<span class="col-3">D-34</span>
+				<div class="border border-info m-2 p-2">
+					<a href="#" class="text-black text-decoration-none"><img src="../../../images/kakao_logo.png" class="img-fluid">
+						<h4 class="mt-1 fw-bold">카카오</h4>
+						<div class="mb-1 fst-italic">백엔드 개발자</div>
+						<div class="mb-2">
+							<span class="badge bg-primary">Java</span>
+							<span class="badge bg-primary">DB</span>
+							<span class="badge bg-primary">Spring</span>
+						</div>
+						<div>
+							<span class="badge bg-success">신입</span>
+							<span class="badge bg-success">학력무관</span>
+							<span class="badge bg-success">경기도</span>
+						</div>
+					</a>
+					<div class="">
+						<button type="button" class="border-0 bg-white mt-2"><h3>❤️</h3></button>
+						<button type="button" class="invisible border-0 bg-white mt-2"><h3>🤍</h3></button>
+						<span class="fw-bold">D-34</span>
 					</div>
-					<button type="button" class="btn btn-warning">북마크</button>
 				</div>
 			</div>
+
+
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="border border-info m-2 p-2">
+					<a href="#" class="text-black text-decoration-none"><img src="../../../images/kakao_logo.png" class="img-fluid">
+						<h4 class="mt-1 fw-bold">카카오</h4>
+						<div class="mb-1 fst-italic">백엔드 개발자</div>
+						<div class="mb-2">
+							<span class="badge bg-primary">Java</span>
+							<span class="badge bg-primary">DB</span>
+							<span class="badge bg-primary">Spring</span>
+						</div>
+						<div>
+							<span class="badge bg-success">신입</span>
+							<span class="badge bg-success">학력무관</span>
+							<span class="badge bg-success">경기도</span>
+						</div>
+					</a>
+					<div class="">
+						<button type="button" class="border-0 bg-white mt-2"><h3>❤️</h3></button>
+						<button type="button" class="invisible border-0 bg-white mt-2"><h3>🤍</h3></button>
+						<span class="fw-bold">D-34</span>
+					</div>
+				</div>
+			</div>
+
+
+			
+
 			
 		</div>
 	</div>
 
-	<div class="col-xl-3 col-lg-2 col-md-1"></div>
+	<div class="col-auto"></div>
 </div>
 
 
