--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -27,57 +27,57 @@
           <h1 class="text-center flex-grow-1">플랫폼명</h1>
         </div>
         <div class="col-4">
-          <a class="btn btn-white" href="/userJoinForm">유저회원가입</a>
-          <a class="btn btn-white" href="/companyJoinForm">기업회원가입</a>
+          <a class="btn btn-white" href="/selectJoinForm">회원가입</a>
           <a class="btn btn-white" href="/loginForm">로그인</a>
         </div>
       </div>
-	</style>
-</head>
 
-<body class="d-flex flex-column min-vh-100">
-
-	<header>
-		<div class="d-flex justify-content-center align-items-center p-1">
-			<div class="col-4"></div>
-			<div class="col-4">
-				<h1 class="text-center flex-grow-1">플랫폼명</h1>
-			</div>
-			<div class="col-4">
-				<a class="btn btn-white" href="/selectJoinForm">회원가입</a>
-				<a class="btn btn-white" href="/loginForm">로그인</a>
-			</div>
-		</div>
-    
-		<nav class="navbar navbar-expand-sm navbar-dark bg-info mb-3">
-			<a href="/"><img src="../../../../../images/brand.png" class="img-thumbnail" alt="브랜드 로고" width="100px"></a>
-			<div class="container-fluid">
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="mynavbar">
-					<ul class="navbar-nav me-auto">
-						<li class="nav-item">
-							<a class="nav-link text-white" href="#">채용정보</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-white" href="#">이력서등록</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-white" href="#">이력서관리</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-white" href="#">지원내역</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-white" href="#">고객센터</a>
-						</li>
-					</ul>
-					<form class="d-flex">
-						<input class="form-control me-2" type="text" placeholder="Search">
-						<button class="badge bg-secondary" type="button">Search</button>
-					</form>
-				</div>
-			</div>
-		</nav>
-	</header>
+      <nav class="navbar navbar-expand-sm navbar-dark bg-info mb-3">
+        <a href="/"
+          ><img
+            src="../../../../../images/brand.png"
+            class="img-thumbnail"
+            alt="브랜드 로고"
+            width="100px"
+        /></a>
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#mynavbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">채용정보</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">이력서등록</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">이력서관리</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">지원내역</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">고객센터</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input
+                class="form-control me-2"
+                type="text"
+                placeholder="Search"
+              />
+              <button class="badge bg-secondary" type="button">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </header>
+  </body>
+</html>
