개인 mustache 및 Controller 생성 (17번 개인기업추천 제외)

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,6 +1,8 @@
 {{> layout/header}}
 
-
+<!-- 메인페이지(인덱스) 화면-->
+<!-- 1, 6, 7, 8, 9 화면 연관-->
+<!-- TODO 로그인전, 후 NavBar 설정 필요  -->
 <div class="d-flex justify-content-center align-items-center">
 	
 	<div class="col-auto"></div>
