김나희 공백작업

--- a/src/main/resources/templates/user/13이력서등록.html
+++ b/src/main/resources/templates/user/13이력서등록.html
@@ -102,7 +102,7 @@
 
             <div class="col-8 p-2">
                   <div class="input-group mb-3">
-                     <span class="input-group-text">이름</span>
+                     <span class="input-group-text"><span class="ms-2 me-4">이름</span></span>
                      <div type="text" class="form-control"></div>
                   </div>
                   <div class="input-group mb-3">
@@ -110,7 +110,7 @@
                      <div type="text" class="form-control"></div>
                   </div>
                   <div class="input-group mb-3">
-                     <span class="input-group-text">주소</span>
+                     <span class="input-group-text"><span class="ms-2 me-4">주소</span></span>
                      <div type="text" class="form-control"></div>
                   </div>
                   <div class="input-group mb-3">
