--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -7,140 +7,138 @@
 	
 	<div class="col-auto"></div>
 	
-	<div class="col-xl-7 col-lg-10 col-md-11 col-sm-12">
+	<div class="col-xxl-7 col-xl-9 col-lg-10 col-md-11 col-sm-12">
 
 
-		<div class="d-flex justify-content-around m-2 border border-info">
-			<div class="m-2 border border-info col-5">
+		<div class="d-flex justify-content-around ps-4 pe-4" style="height: 295px;">
+			<div class="m-2 border border-info col-4">
 				<h4 class="mt-2 text-center">지역별</h4>
-				<div class="d-flex">
-					<div class="col-6">
-						<div class="row ps-3">
-							<button type="button" class="border-0 bg-white">전국</button>
-							<button type="button" class="border-0 bg-white">서울/인천/경기</button>
-							<button type="button" class="border-0 bg-white">부산/울산/경남</button>
-							<button type="button" class="border-0 bg-white">대구/경북</button>
-							<button type="button" class="border-0 bg-white">광주/전라</button>
-							<button type="button" class="border-0 bg-white">대전/세종/충청</button>
-							<button type="button" class="border-0 bg-white">강원</button>
-							<button type="button" class="border-0 bg-white">제주</button>
+				<div class="d-flex justify-content-around p-1">
+						<div class="flex-wrap overflow-y-scroll border me-2 " style="height: 212px;">
+							<button type="button" class="d-block border-0 bg-white text-start w-100 bg-secondary-subtle">전국</button>
+							<hr class="m-0">
+							<button type="button" class="d-block border-0 bg-white text-start w-100">서울/인천/경기</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">부산/울산/경남</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">대구/경북</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">광주/전라</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">대전/세종/충청</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">강원</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">제주</button>
 						</div>
-					</div>
-					<div class="col-5">
-						<div class="row pe-3 overflow-auto" style="height: 210px;">
-							<button type="button" class="border-0 bg-white">전체</button>
-							<button type="button" class="border-0 bg-white">강서구</button>
-							<button type="button" class="border-0 bg-white">금정구</button>
-							<button type="button" class="border-0 bg-white">남구</button>
-							<button type="button" class="border-0 bg-white">동구</button>
-							<button type="button" class="border-0 bg-white">동래구</button>
-							<button type="button" class="border-0 bg-white">부산진구</button>
-							<button type="button" class="border-0 bg-white">북구</button>
-							<button type="button" class="border-0 bg-white">사상구</button>
-							<button type="button" class="border-0 bg-white">사하구</button>
-							<button type="button" class="border-0 bg-white">서구</button>
-							<button type="button" class="border-0 bg-white">수영구</button>
-							<button type="button" class="border-0 bg-white">연제구</button>
-							<button type="button" class="border-0 bg-white">영도구</button>
-							<button type="button" class="border-0 bg-white">중구</button>
-							<button type="button" class="border-0 bg-white">해운대구</button>
-							<button type="button" class="border-0 bg-white">기장군</button>
+						<div class="flex-wrap overflow-y-scroll border " style="height: 212px;">
+							<button type="button" class="d-block border-0 bg-white text-start w-100 bg-secondary-subtle">전체</button>
+							<hr class="m-0">
+							<button type="button" class="d-block border-0 bg-white text-start w-100">강서구</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">금정구</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">남구</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">동구</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">동래구</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">부산진구</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">북구</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">사상구</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">사하구</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">서구</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">수영구</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">연제구</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">영도구</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">중구</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">해운대구</button>
+							<button type="button" class="d-block border-0 bg-white text-start w-100">기장군</button>
 						</div>
-					</div>
-					<div class="col-6"></div>
 				</div>
 
 			</div>
 
 
 
+			<div class="m-2 border border-info col-4">
+				<h4 class="mt-2 text-center">기술별</h4>
 
-			<div class="m-2 border border-info col-5">
+				<div class="form-check d-inline-block ms-3 me-2">
+					<input class="form-check-input" type="checkbox" id="" checked>
+					<label class="form-check-label">모두</label>
+				</div>
+				
+				<hr class="m-1">
+				<div class="d-flex flex-wrap">
+
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="checkbox" id="">
+						<label class="form-check-label">Java</label>
+					</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="checkbox" id="">
+						<label class="form-check-label">DB</label>
+					</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="checkbox" id="">
+						<label class="form-check-label">HTML / CSS</label>
+					</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="checkbox" id="">
+						<label class="form-check-label">Python</label>
+					</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="checkbox" id="">
+						<label class="form-check-label">JavaScript</label>
+					</div>
+					
+				</div>
+
+				
+			</div>
+
+			<div class="m-2 border border-info col-4">
 				<h4 class="mt-2 text-center">직무별</h4>
 
-				<div class="d-flex">
+				<div class="form-check d-inline-block ms-3 me-2">
+					<input class="form-check-input" type="radio" id="" name="radiobutton" checked>
+					<label class="form-check-label">모두</label>
+				</div>
 
+				<hr class="m-1">
 
+				<div class="d-flex flex-wrap">
 
-					
-					<div class="col-auto">
-						<div>
-							<div class="form-check d-inline-block ms-2 me-2">
-								<input class="form-check-input" type="checkbox" id="">
-								<label class="form-check-label">백엔드</label>
-							</div>
-						</div>
-
-						
-						<div>
-							<div class="form-check d-inline-block ms-2 me-2">
-								<input class="form-check-input" type="checkbox" id="">
-								<label class="form-check-label">안드로이드</label>
-							</div>
-						</div>
-
-						
-						<div>
-							<div class="form-check d-inline-block ms-2 me-2">
-								<input class="form-check-input" type="checkbox" id="">
-								<label class="form-check-label">빅데이터</label>
-							</div>
-						</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="radio" id="" name="radiobutton">
+						<label class="form-check-label">백엔드</label>
+					</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="radio" id="" name="radiobutton">
+						<label class="form-check-label">프런트엔드</label>
+					</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="radio" id="" name="radiobutton">
+						<label class="form-check-label">풀스택</label>
+					</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="radio" id="" name="radiobutton">
+						<label class="form-check-label">안드로이드</label>
+					</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="radio" id="" name="radiobutton">
+						<label class="form-check-label">IOS</label>
+					</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="radio" id="" name="radiobutton">
+						<label class="form-check-label">임베디드</label>
+					</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="radio" id="" name="radiobutton">
+						<label class="form-check-label">빅데이터</label>
+					</div>
+					<div class="form-check d-inline-block ms-3 me-2">
+						<input class="form-check-input" type="radio" id="" name="radiobutton">
+						<label class="form-check-label">서버</label>
 					</div>
 
-
-
-					<div class="col-auto">
-						<div>
-							<div class="form-check d-inline-block ms-2 me-2">
-								<input class="form-check-input" type="checkbox" id="">
-								<label class="form-check-label">프런트엔드</label>
-							</div>
-						</div>
-
-						
-						<div>
-							<div class="form-check d-inline-block ms-2 me-2">
-								<input class="form-check-input" type="checkbox" id="">
-								<label class="form-check-label">IOS</label>
-							</div>
-						</div>
-
-						
-						<div>
-							<div class="form-check d-inline-block ms-2 me-2">
-								<input class="form-check-input" type="checkbox" id="">
-								<label class="form-check-label">임베디드</label>
-							</div>
-						</div>
-					</div>
-				
-
-					
-					<div class="col-auto">
-						<div>
-							<div class="form-check d-inline-block ms-2 me-2">
-								<input class="form-check-input" type="checkbox" id="">
-								<label class="form-check-label">풀스택</label>
-							</div>
-						</div>
-
-						
-						<div>
-							<div class="form-check d-inline-block ms-2 me-2">
-								<input class="form-check-input" type="checkbox" id="">
-								<label class="form-check-label">서버</label>
-							</div>
-						</div>
-					</div>
-				
-
-
-					
 				</div>
 
 
 			</div>
+
+			
 		</div>
 
 
@@ -168,13 +166,14 @@
 							<span class="badge bg-success">경기도</span>
 						</div>
 					</a>
-					<div class="">
+					<div class="d-flex justify-content-between">
 						<button type="button" class="border-0 bg-white mt-2"><h3>❤️</h3></button>
-						<button type="button" class="invisible border-0 bg-white mt-2"><h3>🤍</h3></button>
-						<span class="fw-bold">D-34</span>
+						<!-- <button type="button" class="border-0 bg-white mt-2"><h3>🤍</h3></button> -->
+						<span class="fw-bold align-self-center me-3">D-34</span>
 					</div>
 				</div>
 			</div>
+
 
 
 			<div class="col-lg-3 col-md-4 col-sm-6">
@@ -193,13 +192,14 @@
 							<span class="badge bg-success">경기도</span>
 						</div>
 					</a>
-					<div class="">
+					<div class="d-flex justify-content-between">
 						<button type="button" class="border-0 bg-white mt-2"><h3>❤️</h3></button>
-						<button type="button" class="invisible border-0 bg-white mt-2"><h3>🤍</h3></button>
-						<span class="fw-bold">D-34</span>
+						<!-- <button type="button" class="border-0 bg-white mt-2"><h3>🤍</h3></button> -->
+						<span class="fw-bold align-self-center me-3">D-34</span>
 					</div>
 				</div>
 			</div>
+
 
 
 			<div class="col-lg-3 col-md-4 col-sm-6">
@@ -218,13 +218,14 @@
 							<span class="badge bg-success">경기도</span>
 						</div>
 					</a>
-					<div class="">
+					<div class="d-flex justify-content-between">
 						<button type="button" class="border-0 bg-white mt-2"><h3>❤️</h3></button>
-						<button type="button" class="invisible border-0 bg-white mt-2"><h3>🤍</h3></button>
-						<span class="fw-bold">D-34</span>
+						<!-- <button type="button" class="border-0 bg-white mt-2"><h3>🤍</h3></button> -->
+						<span class="fw-bold align-self-center me-3">D-34</span>
 					</div>
 				</div>
 			</div>
+
 
 
 			<div class="col-lg-3 col-md-4 col-sm-6">
@@ -243,13 +244,14 @@
 							<span class="badge bg-success">경기도</span>
 						</div>
 					</a>
-					<div class="">
+					<div class="d-flex justify-content-between">
 						<button type="button" class="border-0 bg-white mt-2"><h3>❤️</h3></button>
-						<button type="button" class="invisible border-0 bg-white mt-2"><h3>🤍</h3></button>
-						<span class="fw-bold">D-34</span>
+						<!-- <button type="button" class="border-0 bg-white mt-2"><h3>🤍</h3></button> -->
+						<span class="fw-bold align-self-center me-3">D-34</span>
 					</div>
 				</div>
 			</div>
+
 
 
 			<div class="col-lg-3 col-md-4 col-sm-6">
@@ -268,10 +270,10 @@
 							<span class="badge bg-success">경기도</span>
 						</div>
 					</a>
-					<div class="">
+					<div class="d-flex justify-content-between">
 						<button type="button" class="border-0 bg-white mt-2"><h3>❤️</h3></button>
-						<button type="button" class="invisible border-0 bg-white mt-2"><h3>🤍</h3></button>
-						<span class="fw-bold">D-34</span>
+						<!-- <button type="button" class="border-0 bg-white mt-2"><h3>🤍</h3></button> -->
+						<span class="fw-bold align-self-center me-3">D-34</span>
 					</div>
 				</div>
 			</div>
