--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -1,9 +1,11 @@
 <footer class="bg-info p-2 mt-auto">
 	<div class="mt-2 d-flex justify-content-around">
-		<a href="#" class="text-decoration-none text-white">회사소개</a>
-		<a href="#" class="text-decoration-none text-white">이용약관</a>
-		<a href="#" class="text-decoration-none text-white">개인정보처리방침</a>
-		<a href="#" class="text-decoration-none text-white">고객센터</a>
+		<div class="col-1"></div>
+		<a href="#" class="col-auto text-decoration-none text-white">회사소개</a>
+		<a href="#" class="col-auto text-decoration-none text-white">이용약관</a>
+		<a href="#" class="col-auto text-decoration-none text-white">개인정보처리방침</a>
+		<a href="#" class="col-auto text-decoration-none text-white">고객센터</a>
+		<div class="col-1"></div>
 	</div>
 
 	<div class="d-flex justify-content-center p-3">
