--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -24,21 +24,21 @@
 		<div class="d-flex justify-content-center align-items-center p-1">
 			<div class="col-4"></div>
 			<div class="col-4">
-				<h1 class="text-center flex-grow-1">플랫폼명</h1>
+				<a class="text-center flex-grow-1 text-decoration-none text-black" href="/"><h1>플랫폼명</h1></a>
 			</div>
-			<div class="col-4">
-				<a class="btn btn-white" href="/selectJoinForm">회원가입</a>
-				<a class="btn btn-white" href="/loginForm">로그인</a>
+			<div class="col-4 d-flex justify-content-end">
+				<a class="btn btn-white fw-bold" href="/selectJoinForm">회원가입</a>
+				<a class="btn btn-white fw-bold" href="/loginForm">로그인</a>
 			</div>
 		</div>
 
-		<nav class="navbar navbar-expand-sm navbar-dark bg-info mb-3">
+		<nav class="navbar navbar-expand-sm navbar-dark bg-info mb-3 p-1">
 			<a href="/"
 			><img
 				src="../../../../../images/brand.png"
-				class="img-thumbnail"
+				class="img-thumbnail "
 				alt="브랜드 로고"
-				width="100px"
+				width="90px"
 			/></a>
 			<div class="container-fluid">
 				<button
