--- a/src/main/resources/templates/layout/compHeader.mustache
+++ b/src/main/resources/templates/layout/compHeader.mustache
@@ -4,7 +4,7 @@
 
 	
 	<div class="h-auto col-xl-6 col-lg-8 col-md-10 col-sm-12 d-flex border border-info">
-		<div class="bg-info col-">
+		<div class="bg-info col-auto">
 			<div class="m-2"></div>
 			<a href="#" class="w-100 btn btn-info">마이 페이지</a>
 			<div class="m-2"></div>
