--- a/src/main/resources/templates/comp/20번기업공고등록.mustache
+++ b/src/main/resources/templates/comp/20번기업공고등록.mustache
@@ -1,11 +1,12 @@
 {{> layout/header}}
 {{> layout/compHeader}}
 
-<!-- 18번 -->
+<!-- 20번 -->
 
 
+		
 		<div class="col-auto container">
-			<h1 class="text-center mt-2">기업 페이지</h1>
+			<h1 class="text-center mt-2">공고등록</h1>
 
 			<div class="d-flex">
 				<div class="m-1 col-4 d-flex flex-column align-items-center overflow-hidden" style="width:170px; height:280px;">
@@ -23,36 +24,36 @@
 						</div>
 						<div class="input-group mb-3">
 							<span class="input-group-text">주소</span>
-							<textarea class="form-control" rows="2">서울특별시 송파구 올림픽로 300 롯데월드타워 35층</textarea>
+							<textarea class="form-control" rows="2" disabled>서울특별시 송파구 올림픽로 300 롯데월드타워 35층</textarea>
 						</div>
 						<div class="input-group mb-3">
 							<span class="input-group-text">전화번호</span>
-							<input type="text" class="form-control" value="051-123-4567">
+							<input type="text" class="form-control" value="051-123-4567" disabled>
 						</div>
 						<div class="input-group mb-2">
 							<span class="input-group-text">홈페이지</span>
-							<input type="text" class="form-control" value="http://localhost:8080">
+							<input type="text" class="form-control" value="http://localhost:8080" disabled>
 						</div>
 				</div>
 
 			</div>
 
-			<!--
+			<div class="input-group mb-3 ms-1">
+				<span class="input-group-text">공고명</span>
+				<input type="text" class="form-control">
+			</div>
 
 			<div class="input-group mb-3 ms-1">
-				<span class="input-group-text">기업소개</span>
+				<span class="input-group-text">공고내용</span>
 				<textarea class="form-control" rows="5"></textarea>
 			</div>
-			-->
+
 
 			<div>
-				<button type="button" class="mb-3 ms-1 w-100 btn btn-success">수정하기</button>
+				<button type="button" class="mb-3 ms-1 w-100 btn btn-success">공고등록</button>
 			</div>
 
 		</div>
-
-
-
 
 
 
